# Card_RPG

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture.md  requirements.md  test_plan.md  testing_report.md  usage_scenarios.md
include/CardGame/: Ability.hpp  Achievement.hpp  AttackCard.hpp  Battle.hpp  Board.hpp  Card.hpp  Card_Game.hpp  Deck.hpp  Effect.hpp  Enemy.hpp  Energy.hpp  EquipmentCard.hpp  HealCard.hpp  ItemCard.hpp  Level.hpp  Player.hpp  Quest.hpp  SpellCard.hpp  TrapCard.hpp  Turn.hpp
src/: Ability.cpp  Achievement.cpp  AttackCard.cpp  Battle.cpp  Board.cpp  CMakeLists.txt  Card.cpp  Card_Game.cpp  Deck.cpp  Effect.cpp  Enemy.cpp  Energy.cpp  EquipmentCard.cpp  HealCard.cpp  ItemCard.cpp  Level.cpp  Player.cpp  Quest.cpp  SpellCard.cpp  TrapCard.cpp  main.cpp
tests/: CMakeLists.txt  test_battle.cpp  test_cards.cpp  test_deck.cpp  test_main.cpp
